Added metacentrum diagram results

--- a/uppasd/Heis2D/inp.HeisDM2D.yaml
+++ b/uppasd/Heis2D/inp.HeisDM2D.yaml
@@ -52,46 +52,49 @@ Volume            0.00000000E+00
 **************** Micro-wave field               ****************
   
 **************** Initial phase                  ****************
-MC, SD, EM                       H
+MC, SD, EM                       M
 Field             0.00000000E+00  0.00000000E+00  0.00000000E+00
-nphase                        30
+nphase                        31
 MC steps, T :
-          100000  3.00000000E+02
-          100000  2.70000000E+02
-          100000  2.43000000E+02
-          100000  2.18000000E+02
-          100000  1.97000000E+02
-          100000  1.77000000E+02
-          100000  1.59000000E+02
-          100000  1.43000000E+02
-          100000  1.29000000E+02
-          100000  1.16000000E+02
-          100000  1.04000000E+02
-          100000  9.40000000E+01
-          100000  8.40000000E+01
-          100000  7.60000000E+01
-          100000  6.80000000E+01
-          100000  6.10000000E+01
-          100000  5.50000000E+01
-          100000  5.00000000E+01
-          100000  4.50000000E+01
-          100000  4.00000000E+01
-          100000  3.60000000E+01
-          100000  3.20000000E+01
-          100000  2.90000000E+01
-          100000  2.60000000E+01
-          100000  2.30000000E+01
-          100000  2.10000000E+01
-          100000  1.90000000E+01
-          100000  1.70000000E+01
-          100000  1.50000000E+01
-          100000  1.40000000E+01
+           10000  2.43000000E+02
+           10000  2.18000000E+02
+           10000  1.97000000E+02
+           10000  1.77000000E+02
+           10000  1.59000000E+02
+           10000  1.43000000E+02
+           10000  1.29000000E+02
+           10000  1.16000000E+02
+           10000  1.04000000E+02
+           10000  9.40000000E+01
+           10000  8.40000000E+01
+           10000  7.60000000E+01
+           10000  6.10000000E+01
+           10000  5.00000000E+01
+           10000  4.00000000E+01
+           10000  3.20000000E+01
+           10000  2.60000000E+01
+           10000  2.10000000E+01
+           10000  1.70000000E+01
+           10000  1.40000000E+01
+           10000  1.20000000E+01
+           10000  1.10000000E+01
+           10000  9.00000000E+00
+           10000  8.00000000E+00
+           10000  7.00000000E+00
+           10000  6.00000000E+00
+           10000  5.00000000E+00
+           10000  4.00000000E+00
+           10000  3.00000000E+00
+           10000  2.00000000E+00
+           10000  1.00000000E+00
  
 **************** Measurement phase              ****************
-MC, SD, MEP                         H
+MC, SD, MEP                         M
 Gradient				 N
 T                 1.00000000E+00
 Field             0.00000000E+00  0.00000000E+00  0.00000000E+00
+Nstep                         10
+Step, Buffer                   0               0
    
 Tottraj                        Y              10              10
 No. trajectories               0
