--- a/CoRuCo/config.in
+++ b/CoRuCo/config.in
@@ -1,11 +1,11 @@
-nx 5
-ny 5
-nz 33
+nx 10
+ny 10
+nz 300
 anisotropy -5.83e-24
 symmetry_file sym.mat
 exchange_file exchange_turek.in
-num_step 200
-num_substep 1000
+num_step 100
+num_substep 5000
 timestep 5e-16
 damping 0.1
 temperature 0.01
@@ -14,5 +14,7 @@ periodic_y 1
 periodic_z 0
 dump_exchange 1
 domain_wall_direction z
-middle_space 0
-middle_offset 0
+# middle_space 0
+# middle_offset 0
+interface_J 0.00275
+spin_direction z
