add manual mode - specify exchange list manually

--- a/magsim/CMakeLists.txt
+++ b/magsim/CMakeLists.txt
@@ -12,18 +12,26 @@ set ( MAGSIM_SOURCES
     Timer.cpp
     TupleReader.cpp
     Util.cpp
+    XyzReader.cpp
 )
 
-add_executable(magsim Cli.cpp ${MAGSIM_SOURCES})
-target_compile_options(magsim PRIVATE "-O2")
-target_compile_options(magsim PRIVATE "-march=native")
-target_compile_options(magsim PRIVATE "-fopenmp")
-
-# target_compile_options(magsim PRIVATE "-pg")
-
-target_compile_features(magsim PRIVATE cxx_std_17)
-
-
 find_package(OpenMP REQUIRED)
-target_link_libraries(magsim PRIVATE OpenMP::OpenMP_CXX)
-# target_link_options(magsim PRIVATE "-pg")
+
+add_executable(magsim_CoRuCo CoRuCo.cpp ${MAGSIM_SOURCES})
+target_compile_options(magsim_CoRuCo PRIVATE "-O2")
+target_compile_options(magsim_CoRuCo PRIVATE "-march=native")
+target_compile_options(magsim_CoRuCo PRIVATE "-fopenmp")
+target_compile_features(magsim_CoRuCo PRIVATE cxx_std_17)
+
+target_link_libraries(magsim_CoRuCo PRIVATE OpenMP::OpenMP_CXX)
+# target_link_options(magsim_CoRuCo PRIVATE "-pg")
+
+
+add_executable(magsim_manual Manual.cpp ${MAGSIM_SOURCES})
+target_compile_options(magsim_manual PRIVATE "-O2")
+target_compile_options(magsim_manual PRIVATE "-march=native")
+target_compile_options(magsim_manual PRIVATE "-fopenmp")
+target_compile_features(magsim_manual PRIVATE cxx_std_17)
+
+target_link_libraries(magsim_manual PRIVATE OpenMP::OpenMP_CXX)
+# target_link_options(magsim_manual PRIVATE "-pg")
