added manual and bulkCo mode, big rewrite

--- a/magsim/CMakeLists.txt
+++ b/magsim/CMakeLists.txt
@@ -1,4 +1,5 @@
 set ( MAGSIM_SOURCES
+    BulkCoGenerator.cpp
     Config.cpp
     ConfigReader.cpp
     CoRuCoGenerator.cpp
@@ -35,3 +36,12 @@ target_compile_features(magsim_manual PRIVATE cxx_std_17)
 
 target_link_libraries(magsim_manual PRIVATE OpenMP::OpenMP_CXX)
 # target_link_options(magsim_manual PRIVATE "-pg")
+
+
+add_executable(magsim_bulkCo BulkCo.cpp ${MAGSIM_SOURCES})
+target_compile_options(magsim_bulkCo PRIVATE "-O2")
+target_compile_options(magsim_bulkCo PRIVATE "-march=native")
+target_compile_options(magsim_bulkCo PRIVATE "-fopenmp")
+target_compile_features(magsim_bulkCo PRIVATE cxx_std_17)
+
+target_link_libraries(magsim_bulkCo PRIVATE OpenMP::OpenMP_CXX)
